--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 
       <section class="about">
         <h2>ارتباط با ما</h2>
-        <h3>شما میتوانید نظر و انتقادات خود را برای ما بفرستید</h3>
+        <h3>شما میتوانید نظر و انتقادات خود را برای ما بفرستید.</h3>
         <article class="about__container--all">
           <div class="about__social">
             <i class="fab fa-twitter-square about__icon"></i>
@@ -726,7 +726,7 @@
                 <input type="text" placeholder="نام" />
                 <input type="email" placeholder="ایمیل" />
                 <textarea placeholder="نظر خود را وارد کنید..."></textarea>
-                <button type="submit" class="btn">ارسال</button>
+                <button type="button" class="btn">ارسال</button>
               </form>
             </div>
           </div>
